Create component CardButton and make web site responsive

--- a/src/components/Talk/Talk.module.css
+++ b/src/components/Talk/Talk.module.css
@@ -12,3 +12,12 @@
   color: var(--blue-600);
   font-weight: 700;
 }
+
+@media (max-width: 27.5rem) {
+  .talkContainer > img {
+    display: none;
+  }
+  .talkP {
+    padding: 1rem 1.5rem;
+  }
+}
