--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -47,6 +47,62 @@
   height: 25rem;
 }
 
+@media (max-width: 46.25rem) {
+  .containerImgHero {
+    width: 31.25rem;
+    height: 19.6431rem;
+  }
+
+  .containerImgHero > img {
+    width: 18.75rem;
+    height: 18.75rem;
+  }
+}
+
+@media (max-width: 32.25rem) {
+  .containerImgHero {
+    margin-top: 2rem;
+    width: 21.25rem;
+    height: 13.3569rem;
+  }
+
+  .containerImgHero > img {
+    width: 12.5rem;
+    height: 12.5rem;
+  }
+}
+
+@media (max-width: 27.5rem) {
+  .heroLayout > p {
+    margin-top: 2rem;
+    margin-bottom: 6px;
+  }
+
+  .heroLayout > h1 {
+    font-size: 2.5rem;
+  }
+
+  .containerBtns {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 22.5rem) {
+  .containerImgHero {
+    margin-top: 2rem;
+    width: 17.5rem;
+    height: 17.5rem;
+  }
+
+  .containerImgHero > img {
+    border-radius: 1.25rem;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 /* INTRODUCITON  */
 
 .introductionBg {
@@ -67,9 +123,6 @@
   padding: 2rem;
   border-radius: 1.25rem;
   box-shadow: 4px 4px hsl(218, 47%, 47%, 20%);
-}
-
-.talk {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: 1.5rem;
@@ -100,6 +153,48 @@
   grid-column: 4/12;
 }
 
+@media (max-width: 65rem) {
+  .talk {
+    width: 100%;
+  }
+}
+
+@media (max-width: 56.25rem) {
+  .talk {
+    margin-top: 2.5rem;
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+}
+
+@media (max-width: 32.25rem) {
+  .introductionBg {
+    background: var(--purple-50);
+    margin-top: -6rem;
+    padding-top: 6rem;
+    padding-bottom: 2.5rem;
+  }
+}
+
+@media (max-width: 27.5rem) {
+  .talk {
+    padding: 1rem;
+    gap: 0px;
+  }
+}
+
+@media (max-width: 22.5rem) {
+  .introductionBg {
+    background: var(--purple-50);
+    margin-top: -9rem;
+    padding-top: 9rem;
+    padding-bottom: 2.5rem;
+  }
+}
+
 /* CATEGORIES */
 
 .categoriesBg {
@@ -108,7 +203,7 @@
     var(--purple-50) 50%,
     var(--purple-100) 50%
   );
-  padding-bottom: 3.75rem;
+  padding-bottom: 5.625rem;
 }
 
 .categoriesLayout {
@@ -131,82 +226,34 @@
 .imgCategoriesContainer {
   margin-top: 2rem;
   display: flex;
+  flex-wrap: wrap;
   gap: 1.25rem;
-}
-
-.imgCategoriesContainer > a {
-  width: 17.5rem;
-  height: 15.3125rem;
-}
-
-.categoriesVideo,
-.categoriesFotos,
-.categoriesDesenhos,
-.categoriesEscrita {
-  background-image: url("../../assets/images/videos-img.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 0.5rem;
-  display: flex;
-  align-items: center;
   justify-content: center;
-  font-family: var(--font-secundary);
-  color: white;
-  font-weight: 600;
-  font-size: 2.5rem;
-  position: relative;
-  overflow: hidden;
-  transition: color 0.3s ease;
 }
 
-.categoriesVideo::before,
-.categoriesFotos::before,
-.categoriesDesenhos::before,
-.categoriesEscrita::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-image: fill 0
-    linear-gradient(hsl(268, 46%, 23%, 40%), hsl(268, 55%, 64%, 40%));
-  border-radius: inherit;
-  pointer-events: none;
-  transition: border-image 0.3s ease;
+@media (max-width: 75rem) {
+  .categoriesBg {
+    background: var(--purple-100) 50%;
+    margin-top: -15rem;
+    padding-top: 16rem;
+  }
 }
 
-.categoriesVideo > p,
-.categoriesFotos > p,
-.categoriesDesenhos > p,
-.categoriesEscrita > p {
-  z-index: 12;
+@media (max-width: 36.25rem) {
+  .categoriesTitle {
+    font-size: 2rem;
+  }
+  .categoriesTitle > img {
+    width: 3.75rem;
+    height: 1.7444rem;
+  }
 }
 
-.categoriesVideo:hover::before,
-.categoriesFotos:hover::before,
-.categoriesDesenhos:hover::before,
-.categoriesEscrita:hover::before {
-  border-image: fill 0
-    linear-gradient(hsl(268, 46%, 23%, 10%), hsl(268, 55%, 64%, 10%));
-}
-
-.categoriesVideo:hover,
-.categoriesFotos:hover,
-.categoriesDesenhos:hover,
-.categoriesEscrita:hover {
-  color: var(--purple-900);
-}
-
-.categoriesFotos {
-  background-image: url("../../assets/images/photo-img.jpg");
-}
-
-.categoriesDesenhos {
-  background-image: url("../../assets/images/art-img.jpg");
-}
-
-.categoriesEscrita {
-  background-image: url("../../assets/images/write-img.jpg");
+@media (max-width: 30rem) {
+  .categoriesTitle {
+    font-size: 2rem;
+  }
+  .categoriesTitle > img {
+    display: none;
+  }
 }
