--- a/src/App.css
+++ b/src/App.css
@@ -83,10 +83,13 @@ a {
   color: inherit;
 }
 
+p {
+  margin: 0px;
+}
+
 .container {
   max-width: 73.75rem;
-  /* max-width: 75.75rem; */
-  /* padding: 0 1rem; */
+
   margin: 0 auto;
 }
 
