--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -44,15 +44,16 @@
 }
 
 .headerLayout > ul > li:last-child {
-  background: var(--purple-200);
+  background: var(--blue-700);
   padding: 0.375rem 0.75rem;
   border-radius: 0.5rem;
   cursor: pointer;
+  box-shadow: 3px 3px hsl(219, 81%, 15%, 20%);
   transition: 0.3s ease-in-out;
 }
 
 .headerLayout > ul > li:last-child:hover {
-  background: var(--purple-300);
+  background: var(--blue-600);
 }
 
 .submenuAnchor {
@@ -82,6 +83,10 @@
 .headerSubmenu.active {
   opacity: 1;
   transform: translateY(0);
+}
+
+.headerLogin {
+  color: white !important;
 }
 
 @media (max-width: 55.625rem) {
