--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -92,14 +92,21 @@
 @media (max-width: 22.5rem) {
   .containerImgHero {
     margin-top: 2rem;
-    width: 17.5rem;
-    height: 17.5rem;
+    width: 18.75rem;
+    height: 18.75rem;
   }
 
   .containerImgHero > img {
     border-radius: 1.25rem;
     width: 100%;
     height: 100%;
+  }
+}
+
+@media (max-width: 18.75rem) {
+  .containerImgHero {
+    width: 17.5rem;
+    height: 17.5rem;
   }
 }
 
@@ -182,7 +189,6 @@
 @media (max-width: 27.5rem) {
   .talk {
     padding: 1rem;
-    gap: 0px;
   }
 }
 
@@ -203,7 +209,7 @@
     var(--purple-50) 50%,
     var(--purple-100) 50%
   );
-  padding-bottom: 5.625rem;
+  padding-bottom: 3.5rem;
 }
 
 .categoriesLayout {
@@ -254,6 +260,29 @@
     font-size: 2rem;
   }
   .categoriesTitle > img {
+    display: none;
+  }
+}
+
+/* TABLE */
+
+.tableBg {
+  background: var(--purple-100);
+  padding-bottom: 2.5rem;
+}
+
+.tableTitle {
+  font-size: 2.5rem;
+  font-family: var(--font-secundary);
+  font-weight: 500;
+  color: var(--purple-700);
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+@media (max-width: 38.75rem) {
+  .tableTitle > img {
     display: none;
   }
 }
