--- a/src/components/CommentPost/CommentPost.module.css
+++ b/src/components/CommentPost/CommentPost.module.css
@@ -3,6 +3,7 @@
 }
 
 .commentForm > textarea {
+  position: relative;
   border: none;
   width: 100%;
   font-size: 1rem;
@@ -11,15 +12,16 @@
   resize: none;
   background: var(--neutral-50);
   padding: 0.75rem;
+  padding-top: 2.5rem;
   box-shadow: 0px 2px 4px hsl(218, 17%, 25%, 20%);
   transition: 0.1s ease-in;
+  border-left: 0.25rem solid transparent;
 }
 
 .commentForm > textarea:focus,
 .commentForm > textarea:hover {
   outline: none;
-
-  border-left: 0.25rem solid var(--purple-600);
+  border-left-color: var(--purple-600);
 }
 
 .commentForm > button {
@@ -34,4 +36,10 @@
   font-family: var(--font-secundary);
   background-color: var(--purple-500);
   padding: 0.375rem 0.75rem;
+}
+
+.starRating {
+  position: absolute;
+  top: 0.75rem;
+  left: 0.75rem;
 }
