User painel done, and Post Post done

--- a/src/components/Form/InputForm/InputForm.module.css
+++ b/src/components/Form/InputForm/InputForm.module.css
@@ -6,5 +6,5 @@
   font-size: 1rem;
   font-family: var(--font-secundary);
   color: var(--purple-800);
-  border-left: 0.25rem solid var(--purple-300);
+  border-left: 0.25rem solid transparent;
 }
