--- a/src/components/Form/LabelForm/LabelForm.module.css
+++ b/src/components/Form/LabelForm/LabelForm.module.css
@@ -1,5 +1,4 @@
-.inputForm {
-  color: var(--purple-100);
+.labelForm {
   font-family: var(--font-secundary);
   font-weight: 600;
   font-size: 1.125rem;
