--- a/src/components/TitleComponent/TitleComponent.module.css
+++ b/src/components/TitleComponent/TitleComponent.module.css
@@ -18,9 +18,6 @@
   }
 
   .titleStyles > img {
-    position: absolute;
-    z-index: -1;
-    top: 0px;
-    left: -14px;
+    display: none;
   }
 }
